# Multiagent-A2A

./: README.md  hello_client.py  pyproject.toml
aifoundry/host_agent/: __main__.py  remote_agent_connection.py  routing_agent.py  test_routing_agent.py
aifoundry/remote_agents/sports_news_agent/: __main__.py  agent.py
aifoundry/remote_agents/sports_results_agent/: agent_executor.py
google/: .env.sample  __main__.py  remote_agent_connection.py  routing_agent.py
mcp_server/: sports_news_server.py  start_server_sse.py
openai/host_agent/: __main__.py  routing_agent.py
openai/remote_agents/sports_news_agent/: agent.py  agent_executor.py
openai/remote_agents/sports_results_agent/: __main__.py  agent.py
tests/: test_mcp.py  test_openai_agent.py
